--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
 		"php": ">= 5.5",
 		"nette/nette": "~2.3",
 		"nette/tester": "~1.4",
-		"kdyby/curl": "2.2.*@dev"
+		"kdyby/curl": "~2.2",
+		"kdyby/events": "~2.4"
 	}
 }
